@@ -168,7 +168,7 @@ public class PaymentsEditor extends javax.swing.JPanel implements EditorRecord {
             if (d == null) {
                 return null;
             } else if (d.doubleValue() < 0.0) {
-                return new Double(-d.doubleValue());
+                return Double.valueOf(-d.doubleValue());
             } else {
                 return d;
             }
@@ -179,13 +179,13 @@ public class PaymentsEditor extends javax.swing.JPanel implements EditorRecord {
             super(key, text);
         }
         public Double positivize(Double d) {
-            return d == null ? null : new Double(-d.doubleValue());
+            return d == null ? null : Double.valueOf(-d.doubleValue());
         }
         public Double addSignum(Double d) {
             if (d == null) {
                 return null;
             } else if (d.doubleValue() > 0.0) {
-                return new Double(-d.doubleValue());
+                return Double.valueOf(-d.doubleValue());
             } else {
                 return d;
             }
