@@ -50,9 +50,9 @@ public class PaymentInfoCash extends PaymentInfo {
     }
     
     public String printPaid() {
-        return Formats.CURRENCY.formatValue(new Double(m_dPaid));
+        return Formats.CURRENCY.formatValue(Double.valueOf(m_dPaid));
     }   
     public String printChange() {
-        return Formats.CURRENCY.formatValue(new Double(m_dPaid - m_dTotal));
+        return Formats.CURRENCY.formatValue(Double.valueOf(m_dPaid - m_dTotal));
     }    
 }
