@@ -26,7 +26,7 @@ public class ScaleFake implements Scale {
     }
     
     public Double readWeight() throws ScaleException {
-        return new Double(Math.random() * 2.0);
+        return Double.valueOf(Math.random() * 2.0);
     }
     
 }
